add 病例+授权信息
